--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
 
           const body = {id_token: response.credential};
 
-          fetch('http://localhost:8081/api/auth/google', {
+          fetch('https://restserver-nodevm.herokuapp.com/api/auth/google', {
               method: 'POST',
               headers: {
                   'Content-Type': 'application/json'
