Google singIn nuevo1

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,9 @@
 
           const body = {id_token: response.credential};
 
-          fetch('https://restserver-nodevm.herokuapp.com/api/auth/google', {
+          fetch(window.location.hostname.includes('localhost')
+          ?'http://localhost:8081/api/auth/google'
+          :'https://restserver-nodevm.herokuapp.com/api/auth/google', {
               method: 'POST',
               headers: {
                   'Content-Type': 'application/json'
